workloads/gateway/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.observability.svc.cluster.local
  ports:
    - port: 3000
