workloads/gateway/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: grafana-john2143-https
  hostnames: [grafana.john2143.com]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: content-rate-limit
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: content-inflight-limit
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - name: grafana
          namespace: observability
          port: 80
